// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HybridCard2 should render is-read correctly 1`] = `
<div>
  <article
    class="hybridCard2 isRead"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="xs__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <source
            media="(max-width:639px)"
            srcset="https://images.example.com/imageS.png"
          />
          <source
            media="(max-width:860px)"
            srcset="https://images.example.com/imageM.png"
          />
          <source
            media="(min-width:861px)"
            srcset="https://images.example.com/imageL.png"
          />
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption />
      </figure>
      <div
        class="teaserText xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2 body-text sans s"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HybridCard2 should render variant-1 correctly 1`] = `
<div>
  <article
    class="hybridCard2"
    id="1"
  >
    <a
      aria-label="This is the title"
      class="xs__p+4"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0 s__mt-4 s__mr-4 s__mb+3 s__ml-4"
      >
        <picture>
          <source
            media="(max-width:639px)"
            srcset="https://images.example.com/imageS.png"
          />
          <source
            media="(max-width:860px)"
            srcset="https://images.example.com/imageM.png"
          />
          <source
            media="(min-width:861px)"
            srcset="https://images.example.com/imageL.png"
          />
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption />
      </figure>
      <div
        class="teaserText xs__pl+4 s__pr-0 s__pb-0 s__pl-0"
      >
        <div
          class="meta xs__mb+2 body-text sans s"
        >
          <span
            class="prefix"
          >
            Ondernemen
          </span>
        </div>
        <div
          class="textContainer"
        >
          <h1
            class="heading serif xs xs__m-0"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;
